--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 *, *::before, *::after {
@@ -50,5 +51,15 @@ body {
   background-position: top center;
   background-size: cover;
   position: relative;
+  padding: 74px 0 50px;
+}
+
+.scroll__btn {
+  padding: 13px 0 50px;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 /*# sourceMappingURL=style.css.map */
