--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,6 @@
 html {
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 *,*::before, *::after {
@@ -46,4 +47,14 @@ body {
     background-position: top center;
     background-size: cover;
     position: relative;
+    padding: 74px 0 50px;
+}
+
+.scroll__btn {
+    padding: 13px 0 50px;
+    text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
