--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ body {
   color: #fff;
   font-family: 'Ubuntu', sans-serif;
   font-weight: 300;
-  font-style: 17px;
+  font-size: 17px;
   line-height: 26px;
 }
 
@@ -49,17 +49,33 @@ body {
 }
 
 .page-section {
-  min-height: 100vh;
   background-image: url(../images/page-bg.jpg);
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
   position: relative;
+}
+
+.page-section::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(107.54deg, rgba(23, 26, 28, 0.72) 0%, #5E5E57 100%);
+  opacity: 0.15;
+}
+
+.page-section__wrapper {
+  min-height: 100vh;
   padding: 74px 0 50px;
+  z-index: 1;
+  position: relative;
 }
 
 .scroll__btn {
-  padding: 13px 0 50px;
+  padding: 13px 0;
   text-align: center;
   position: absolute;
   left: 0;
@@ -114,5 +130,132 @@ body {
   line-height: 53px;
   padding-left: 25px;
   margin-bottom: 55px;
+}
+
+.header {
+  position: fixed;
+  left: 0;
+  top: 30px;
+  right: 0;
+  z-index: 10;
+}
+
+.header__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 30px;
+  font-family: Ubuntu;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 17px;
+  text-transform: uppercase;
+}
+
+.header__btn {
+  color: white;
+  background-color: transparent;
+  padding: 6px 28px;
+  border: 1px solid white;
+  border-radius: 3px;
+  margin-right: 8px;
+  text-transform: uppercase;
+  cursor: pointer;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.header__btn:hover {
+  color: black;
+  background-color: white;
+}
+
+.header__phone {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 18px;
+}
+
+.menu__list-item {
+  display: inline-block;
+}
+
+.menu__list-item + .menu__list-item {
+  padding-left: 20px;
+}
+
+.top {
+  background-image: url(../images/top-bg.jpg);
+}
+
+.top::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: radial-gradient(45.97% 54.43% at 50% 45.57%, rgba(23, 26, 28, 0) 50.28%, rgba(23, 26, 28, 0.00225974) 50.29%, rgba(4, 5, 5, 0.820343) 58.72%, rgba(5, 5, 6, 0.792703) 80.08%, #000000 87.89%);
+  opacity: 0.4;
+}
+
+.top__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.top__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.top__title {
+  font-family: 'SFProDisplay-Semibold', sans-serif;
+  font-weight: 600;
+  font-size: 96px;
+  line-height: 115px;
+  margin-bottom: 25px;
+}
+
+.top__text {
+  margin: 25px 0 35px;
+  max-width: 325px;
+  font-weight: 300;
+  font-size: 17px;
+  line-height: 150%;
+}
+
+.top__social-item {
+  display: inline-block;
+  margin: 0 25px;
+}
+
+.top__social-link {
+  opacity: 0.5;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.top__social-link:hover {
+  opacity: 1;
 }
 /*# sourceMappingURL=style.css.map */
