--- a/css/style.scss
+++ b/css/style.scss
@@ -36,7 +36,7 @@ body {
     color: #fff;
     font-family: 'Ubuntu', sans-serif;
     font-weight: 300;
-    font-style: 17px;
+    font-size: 17px;
     line-height: 26px;
 }
 .container {
@@ -45,17 +45,31 @@ body {
     margin: 0 auto;
 }
 .page-section {
-    min-height: 100vh;
     background-image: url(../images/page-bg.jpg);
     background-repeat: no-repeat;
     background-position: top center;
     background-size: cover;
     position: relative;
-    padding: 74px 0 50px;
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: linear-gradient(107.54deg, rgba(23, 26, 28, 0.72) 0%, #5E5E57 100%);
+        opacity: 0.15;
+    }
+    &__wrapper {
+        min-height: 100vh;
+        padding: 74px 0 50px;
+        z-index: 1;
+        position: relative;
+    }
 }
 
 .scroll__btn {
-    padding: 13px 0 50px;
+    padding: 13px 0;
     text-align: center;
     position: absolute;
     left: 0;
@@ -114,4 +128,102 @@ body {
     line-height: 53px;
     padding-left: 25px;
     margin-bottom: 55px;
+}
+
+.header {
+    position: fixed;
+    left: 0;
+    top: 30px;
+    right: 0;
+    z-index: 10;
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        min-height: 30px;
+        font-family: Ubuntu;
+        font-weight: 500;
+        font-size: 15px;
+        line-height: 17px;
+        text-transform: uppercase;
+    }
+    &__btn {
+        color: white;
+        background-color: transparent;
+        padding: 6px 28px;
+        border: 1px solid white;
+        border-radius: 3px;
+        margin-right: 8px;
+        text-transform: uppercase;
+        cursor: pointer;
+        transition: all .3s;
+        &:hover {
+            color: black;
+            background-color: white;
+        }
+    }
+    &__phone {
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 18px;
+    }
+}
+
+.menu {
+    &__list-item {
+        display: inline-block;
+        & + .menu__list-item {
+            padding-left: 20px;
+        }
+    }
+}
+
+
+.top {
+    background-image: url(../images/top-bg.jpg);
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: radial-gradient(45.97% 54.43% at 50% 45.57%, rgba(23, 26, 28, 0) 50.28%, rgba(23, 26, 28, 0.00225974) 50.29%, rgba(4, 5, 5, 0.820343) 58.72%, rgba(5, 5, 6, 0.792703) 80.08%, #000000 87.89%);
+        opacity: 0.4;
+    }
+    &__wrapper {
+        display: flex;
+        align-items: flex-end;
+    }
+    &__inner {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+    }
+    &__title {
+        font-family: 'SFProDisplay-Semibold', sans-serif;
+        font-weight: 600;
+        font-size: 96px;
+        line-height: 115px;
+        margin-bottom: 25px;
+    }
+    &__text {
+        margin: 25px 0 35px;
+        max-width: 325px;
+        font-weight: 300;
+        font-size: 17px;
+        line-height: 150%;
+    }
+    &__social-item {
+        display: inline-block;
+        margin: 0 25px;
+    }
+    &__social-link {
+        opacity: 0.5;
+        transition: all .3s;
+        &:hover {
+            opacity: 1;
+        }
+    }
 }
