--- a/css/style.scss
+++ b/css/style.scss
@@ -39,6 +39,7 @@ body {
     font-size: 17px;
     line-height: 26px;
 }
+
 .container {
     max-width: 1270px;
     padding: 0 15px;
@@ -128,6 +129,7 @@ body {
     line-height: 53px;
     padding-left: 25px;
     margin-bottom: 55px;
+    padding-top: 200px;
 }
 
 .header {
@@ -141,7 +143,7 @@ body {
         justify-content: space-between;
         align-items: center;
         min-height: 30px;
-        font-family: Ubuntu;
+        font-family: 'Ubuntu', sans-serif;
         font-weight: 500;
         font-size: 15px;
         line-height: 17px;
@@ -224,6 +226,77 @@ body {
         transition: all .3s;
         &:hover {
             opacity: 1;
+        }
+    }
+}
+
+
+.products {
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        padding-left: 50px;
+    }
+    &__text {
+        max-width: 440px;
+        font-family: 'Ubuntu', sans-serif;
+        font-weight: 300;
+        font-size: 17px;
+        line-height: 150%;
+        p {
+            margin-bottom: 30px;
+        }
+    }
+    &__slider-box {
+        position: relative;
+        padding-top: 110px;
+    }
+    &__slider-text {
+        max-width: 281px;
+        position: absolute;
+        text-align: right;
+        font-family: 'Ubuntu', sans-serif;
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 28px;
+        bottom: 30px;
+        left: -250px;
+        z-index: 5;
+    }
+    &__slider {
+        max-width: 560px;
+        &::before {
+            content: '';
+            position: absolute;
+            width: 560px;
+            height: 276px;
+            border: 4px solid white;
+            top: -15px;
+            right: -17px;
+        }
+    }
+}
+
+.slider-btn {
+    padding: 16px 26px;
+    border: none;
+    background-color: #fff;
+    position: absolute;
+    right: 0;
+    cursor: pointer;
+    z-index: 5;
+    bottom: -45px;
+    outline: transparent;
+    svg {
+        stroke: black;
+    }
+    &__left {
+        right: 62px;
+    }
+    &.slick-disabled {
+        background-color: black;
+        svg {
+            stroke: white;
         }
     }
 }
