--- a/css/style.scss
+++ b/css/style.scss
@@ -400,3 +400,73 @@ body {
         line-height: 130%;
     }
 }
+
+.specifications {
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    &__item {
+    }
+    &__box {
+        width: 280px;
+        position: relative;
+        margin-top: 10px;
+        &::before {
+            content: '';
+            position: absolute;
+            background-repeat: no-repeat;
+            background-position: 0 0;
+            background-size: contain;
+        }
+    }
+    &__box-2 {
+        margin-top: 140px;
+    }
+    &__box-4 {
+        margin-top: 160px;
+    }
+    &__box-1::before {
+        background-image: url('../images/pointer-1.svg');
+        width: 229px;
+        height: 114px;
+        right: -166px;
+        top: 15px;
+    }
+    &__box-2::before {
+        background-image: url('../images/pointer-2.svg');
+        width: 346px;
+        height: 81px;
+        right: -318px;
+        top: -65px;
+    }
+    &__box-3::before {
+        background-image: url('../images/pointer-3.svg');
+        width: 258px;
+        height: 103px;
+        left: -276px;
+        top: 15px;
+    }
+    &__box-4::before {
+        background-image: url('../images/pointer-4.svg');
+        width: 124px;
+        height: 89px;
+        left: -144px;
+        top: -72px;
+    } 
+
+    &__box-title {
+        font-family: 'Ubuntu', sans-serif;
+        font-weight: 700;
+        font-size: 21px;
+        line-height: 28px;
+        margin-bottom: 10px;
+    }
+    &__box-text {
+        font-family: 'Ubuntu', sans-serif;
+        font-weight: 300;
+        font-size: 15px;
+        line-height: 130%;
+    }
+}
