added style for sections questions

--- a/css/style.scss
+++ b/css/style.scss
@@ -464,9 +464,71 @@ body {
         margin-bottom: 10px;
     }
     &__box-text {
-        font-family: 'Ubuntu', sans-serif;
+        
         font-weight: 300;
         font-size: 15px;
         line-height: 130%;
+    }
+}
+
+.questions {
+    &__items {
+        max-width: 757px;
+        padding-bottom: 15px;   
+    }
+    &__item {
+        background-color: rgba(0, 0, 0, 0.3);
+        max-width: 690px;
+        position: relative;
+        &:nth-child(3)::before {
+            content: '';
+            position: absolute;
+            width: 319px;
+            height: 125px;
+            top: -20px;
+            right: -387px;
+            background-image: url('../images/questions-mavic.png');
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+    }
+    &__item-title {
+        font-family: 'Ubuntu', sans-serif;
+        font-weight: 500;
+        font-size: 21px;
+        line-height: 28px;
+        color: rgba(255, 255, 255, 0.8);
+        padding: 20px 10px 20px 40px;
+        position: relative;
+        cursor: pointer;
+        &::after {
+            content: url('../images/accordion-arrow.svg');
+            position: absolute;
+            width: 72px;
+            height: 67px;
+            background-color: white;
+            right: -72px;
+            top: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    }
+    &__item-text {
+        font-family: 'Ubuntu', sans-serif;
+        font-weight: 300;
+        font-size: 15px;
+        line-height: 150%;
+        padding: 0 5px 75px 50px;
+        margin: 0;
+        display: none;
+    }
+    &__item.questions__item--active {
+        .questions__item-title::after{
+            transform: rotate(180deg);
+        }
+        .questions__item-text {
+            display: block;
+        }
     }
 }
