--- a/css/style.css
+++ b/css/style.css
@@ -533,9 +533,80 @@ body {
 }
 
 .specifications__box-text {
-  font-family: 'Ubuntu', sans-serif;
   font-weight: 300;
   font-size: 15px;
   line-height: 130%;
+}
+
+.questions__items {
+  max-width: 757px;
+  padding-bottom: 15px;
+}
+
+.questions__item {
+  background-color: rgba(0, 0, 0, 0.3);
+  max-width: 690px;
+  position: relative;
+}
+
+.questions__item:nth-child(3)::before {
+  content: '';
+  position: absolute;
+  width: 319px;
+  height: 125px;
+  top: -20px;
+  right: -387px;
+  background-image: url("../images/questions-mavic.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.questions__item-title {
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 500;
+  font-size: 21px;
+  line-height: 28px;
+  color: rgba(255, 255, 255, 0.8);
+  padding: 20px 10px 20px 40px;
+  position: relative;
+  cursor: pointer;
+}
+
+.questions__item-title::after {
+  content: url("../images/accordion-arrow.svg");
+  position: absolute;
+  width: 72px;
+  height: 67px;
+  background-color: white;
+  right: -72px;
+  top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.questions__item-text {
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 150%;
+  padding: 0 5px 75px 50px;
+  margin: 0;
+  display: none;
+}
+
+.questions__item.questions__item--active .questions__item-title::after {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.questions__item.questions__item--active .questions__item-text {
+  display: block;
 }
 /*# sourceMappingURL=style.css.map */
