--- a/css/style.scss
+++ b/css/style.scss
@@ -500,6 +500,7 @@ body {
         color: rgba(255, 255, 255, 0.8);
         padding: 20px 10px 20px 40px;
         position: relative;
+        margin-bottom: 4px;
         cursor: pointer;
         &::after {
             content: url('../images/accordion-arrow.svg');
@@ -520,7 +521,7 @@ body {
         font-size: 15px;
         line-height: 150%;
         padding: 0 5px 75px 50px;
-        margin: 0;
+        margin: 0 0 4px 0;
         display: none;
     }
     &__item.questions__item--active {
@@ -530,5 +531,127 @@ body {
         .questions__item-text {
             display: block;
         }
+    }
+}
+
+.contacts {
+    &__inner {
+        display: flex;
+        padding-left: 25px;
+    }
+    &__info {
+        width: 240px;
+        margin-right: 60px;
+    }
+    &__info-box {
+        margin-bottom: 30px;
+    }
+    &__info-title {
+        font-family: 'Ubuntu', sans-serif;
+        font-weight: 700;
+        font-size: 21px;
+        line-height: 24px;
+        margin:0 0 13px;
+    }
+    &__info-phone,
+    &__info-email {
+        font-size: 15px;
+        line-height: 18px;
+        transition: all .3s;
+    }
+    &__info-email:hover {
+        text-decoration: underline;
+    }
+    &__form {
+        width: 570px;
+        margin-right: 106px;
+    }
+    &__form-title{
+        font-family: 'Ubuntu', sans-serif;
+        font-weight: 700;
+        font-size: 21px;
+        line-height: 24px;
+        margin:0 0 13px;
+    }
+    &__form-text {
+        font-size: 15px;
+        line-height: 18px;
+        margin: 0 0 12px;
+    }
+    &__form-line {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 10px;
+    }
+    &__form-input,
+    &__form-textarea {
+        background: rgba(0, 0, 0, 0.5);
+        border: none;
+        font-family: 'Ubuntu', sans-serif;
+        font-weight: 400;
+        font-size: 13px;
+        line-height: 130%;
+        padding: 15px;
+        color: white;
+        &::placeholder {
+            color: rgba(#fff, 0.4);
+        }
+    }
+    &__form-input {
+        width: 49%;
+       
+    }
+    &__form-textarea {
+        width: 100%;
+        min-height: 144px;
+        resize: none;
+    }
+    &__form-btn {
+        text-transform: uppercase;
+        font-family: 'Ubuntu', sans-serif;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 16px; 
+        letter-spacing: 0.03em;
+        border: 1px solid #FFFFFF;
+        border-radius: 2px;
+        padding: 9px 15px;
+        color: #FFFFFF;
+        background-color: transparent;
+        cursor: pointer;
+        transition: all .3s;
+        &:hover {
+            background-color: white;
+            color: black;
+        }
+    }
+    &__social-list {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    &__social-item {
+        padding: 14px 0;
+    }
+    &__social-link {
+        opacity: 0.5;
+        transition: all .3s;
+        &:hover {
+            opacity: 1;
+        }
+    }
+}
+
+.footer {
+    position: absolute;
+    bottom: 32px;
+    left: 0;
+    right: 0;
+    &__copy {
+        text-align: right;
+        font-weight: 300;
+        font-size: 13px;
+        line-height: 130%;
+        color: rgba(#fff, 0.64);
     }
 }
