--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,18 @@ body {
   padding-left: 20px;
 }
 
+.menu__list-item.active a {
+  text-decoration: underline;
+}
+
+.menu__list-phone {
+  display: none;
+}
+
+.menu__btn {
+  display: none;
+}
+
 .top {
   background-image: url(../images/top-bg.jpg);
 }
@@ -775,5 +787,183 @@ body {
   font-size: 13px;
   line-height: 130%;
   color: rgba(255, 255, 255, 0.64);
+}
+
+@media (max-width: 1366px) {
+  body {
+    font-size: 16px;
+    line-height: 22px;
+  }
+  .top__title {
+    font-size: 75px;
+    line-height: 90px;
+    margin-bottom: 20px;
+  }
+  .top__inner img {
+    width: 80%;
+  }
+  .top__text {
+    margin: 0 15px 25px;
+  }
+}
+
+@media (max-width: 1100px) {
+  .menu {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+  .menu__list {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(28, 28, 28, 0.9);
+    z-index: -1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-top: 90px;
+    padding-left: 24px;
+    overflow: auto;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-transform: translateY(-1000%);
+            transform: translateY(-1000%);
+    -webkit-transition: -webkit-transform .5s;
+    transition: -webkit-transform .5s;
+    transition: transform .5s;
+    transition: transform .5s, -webkit-transform .5s;
+  }
+  .menu__list--active {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  .menu__list-item + .menu__list-item {
+    padding-left: 0px;
+  }
+  .menu__list-item {
+    margin-bottom: 35px;
+  }
+  .menu__list-item:first-child {
+    margin-top: auto;
+  }
+  .menu__list-phone,
+  .menu__list-link {
+    display: block;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 17px;
+    color: #FFFFFF;
+  }
+  .menu__list-phone {
+    padding-top: 33px;
+    position: relative;
+    margin-top: auto;
+    margin-bottom: auto;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 18px;
+  }
+  .menu__list-phone::before {
+    content: '';
+    position: absolute;
+    border-top: 1px solid rgba(255, 255, 255, 0.24);
+    top: 0;
+    left: -24px;
+    right: 0;
+  }
+  .menu__btn {
+    display: block;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    padding: 0;
+    cursor: pointer;
+  }
+  .menu__btn::before,
+  .menu__btn::after {
+    content: '';
+    background-color: #E0E0E0;
+    display: block;
+    width: 24px;
+    height: 2px;
+    margin-bottom: 4px;
+    -webkit-transition: -webkit-transform .3s;
+    transition: -webkit-transform .3s;
+    transition: transform .3s;
+    transition: transform .3s, -webkit-transform .3s;
+  }
+  .menu__btn::after {
+    margin-bottom: 0;
+    width: 16px;
+    height: 2px;
+    margin-left: auto;
+  }
+  .menu__btn-line {
+    background-color: #E0E0E0;
+    display: block;
+    width: 24px;
+    height: 2px;
+    margin-bottom: 4px;
+    opacity: 1;
+    -webkit-transition: opacity .6s;
+    transition: opacity .6s;
+  }
+  .menu__btn.menu__btn--active .menu__btn-line {
+    opacity: 0;
+    -webkit-transition: opacity 0s;
+    transition: opacity 0s;
+  }
+  .menu__btn.menu__btn--active::after {
+    width: 24px;
+    -webkit-transform: translateY(-6px) rotate(-135deg);
+            transform: translateY(-6px) rotate(-135deg);
+  }
+  .menu__btn.menu__btn--active::before {
+    -webkit-transform: translateY(6px) rotate(135deg);
+            transform: translateY(6px) rotate(135deg);
+  }
+  .header__phone {
+    display: none;
+  }
+  .header__btn {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 540px) {
+  .top__title {
+    display: none;
+  }
+  .top__text {
+    margin: 0 15px 25%;
+  }
+  .scroll__btn {
+    padding: 13px 0;
+  }
+}
+
+@media (max-height: 377px) {
+  .menu__list-phone {
+    padding: 8px 0;
+  }
+  .menu__list-item {
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-height: 340px) {
+  .menu__list-phone {
+    padding: 14px 0;
+  }
+  .menu__list-item {
+    margin-bottom: 14px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
