--- a/css/style.scss
+++ b/css/style.scss
@@ -178,6 +178,16 @@ body {
         & + .menu__list-item {
             padding-left: 20px;
         }
+        &.active a {
+            text-decoration: underline;
+        }
+    }
+    
+    &__list-phone {
+        display: none;
+    }
+    &__btn {
+        display: none;
     }
 }
 
@@ -654,5 +664,164 @@ body {
         font-size: 13px;
         line-height: 130%;
         color: rgba(#fff, 0.64);
+    }
+}
+
+@media (max-width: 1366px) {
+    body {
+        font-size: 16px;
+        line-height: 22px;
+    }
+    .top__title {
+        font-size: 75px;
+        line-height: 90px;
+        margin-bottom: 20px;
+    }
+    .top__inner img {
+        width: 80%;
+    }
+    .top__text {
+        margin: 0 15px 25px;
+    }
+}
+@media (max-width: 1100px) {
+    .menu {
+        order: 1;
+    }
+    .menu__list {
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background: rgba(#1C1C1C, 0.9);
+        z-index: -1;
+        display: flex;
+        flex-direction: column;
+        padding-top: 90px;
+        padding-left: 24px;
+        overflow: auto;
+        justify-content: space-around;
+        transform: translateY(-1000%);
+        transition: transform .5s;
+        &--active {
+            transform: translateY(0);
+        }
+    }
+    .menu__list-item + .menu__list-item {
+        padding-left: 0px;
+    }
+    .menu__list-item {
+        margin-bottom: 35px;
+        &:first-child {
+            margin-top: auto;
+        }
+    }
+    .menu__list-phone,
+    .menu__list-link {
+        display: block;
+        font-weight: 500;
+        font-size: 15px;
+        line-height: 17px;
+        color: #FFFFFF;
+    }
+    .menu__list-phone {
+        padding-top: 33px;
+        position: relative;
+        margin-top: auto;
+        margin-bottom: auto;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 18px;
+        &::before {
+            content: '';
+            position: absolute;
+            border-top: 1px solid rgba(#fff, 0.24);
+            top: 0;
+            left: -24px;
+            right: 0;
+        }
+    }
+    .menu__btn {
+        display: block;
+        background-color: transparent;
+        border: none;
+        outline: none;
+        padding: 0;
+        cursor: pointer;
+    }
+    .menu__btn::before,
+    .menu__btn::after {
+        content: '';
+        background-color: #E0E0E0;
+        display: block;
+        width: 24px;
+        height: 2px;
+        margin-bottom: 4px;
+        transition: transform .3s;
+    }
+    .menu__btn::after {
+        margin-bottom: 0;
+        width: 16px;
+        height: 2px;
+        margin-left: auto;
+    }
+    .menu__btn-line {
+        background-color: #E0E0E0;
+        display: block;
+        width: 24px;
+        height: 2px;
+        margin-bottom: 4px;
+        opacity: 1;
+        transition: opacity .6s;
+    }
+    .menu__btn.menu__btn--active {
+        .menu__btn-line {
+            opacity: 0;
+            transition: opacity 0s;
+            
+        }
+        &::after {
+            width: 24px;
+            transform: translateY(-6px) rotate(-135deg);
+        }
+        &::before {
+            transform: translateY(6px) rotate(135deg);
+        } 
+    }
+    .header__phone {
+        display: none;
+    }
+    .header__btn {
+        margin-right: 0;
+    }
+}
+
+@media (max-width: 540px) {
+    .top__title {
+        display: none;
+    }
+    .top__text {
+        margin: 0 15px 25%;
+    }
+    .scroll__btn {
+        padding: 13px 0;
+    }
+}
+
+@media (max-height: 377px) {
+    .menu__list-phone {
+        padding: 8px 0;
+    }
+    .menu__list-item {
+        margin-bottom: 30px;
+    }
+}
+@media (max-height: 340px) {
+    .menu__list-phone {
+        padding: 14px 0;
+    }
+    .menu__list-item {
+        margin-bottom: 14px;
     }
 }
