--- a/css/style.scss
+++ b/css/style.scss
@@ -683,6 +683,49 @@ body {
     .top__text {
         margin: 0 15px 25px;
     }
+    .title {
+        padding-top: 90px;
+    }
+    .products__slider-box {
+        padding-top: 0;
+    }
+    .products__slider-text {
+        left: auto;
+        bottom: auto;
+        right: 0;
+        top: -105px;
+    }
+    .title {
+        margin-bottom: 20px;
+        padding-top: 20px;
+        line-height: 40px;
+        }
+    .benefits__item {
+        margin-bottom: 80px;
+    }
+    .specifications__box-1::before,
+    .specifications__box-2::before,
+    .specifications__box-3::before,
+    .specifications__box-4::before {
+        display: none;
+    }
+    .specifications__item img {
+        width: 100%;
+    }
+}
+@media (max-width: 1280px) {
+    .header {
+        top: 0;
+        padding: 10px 0;
+        background: #0000008f;
+    }
+    .benefits__item {
+        width: 45%;
+    }
+    .benefits__item::before,
+    .benefits__item::after {
+        display: none;
+    }
 }
 @media (max-width: 1100px) {
     .menu {
@@ -795,8 +838,143 @@ body {
     .header__btn {
         margin-right: 0;
     }
-}
+    .products__slider-box {
+        padding-right: 20px;
+    }
+    .products__text {
+        padding-right: 15px;
+    }
 
+    .benefits__items {
+        display: block; 
+    }
+    .benefits__item {
+        width: 100%;
+        margin-bottom: 40px;
+    }
+    .benefits__info {
+        width: 35%;
+    }
+    .benefits__item:nth-child(even) {
+        margin-left: 200px;
+        transform: translateY(0);
+    }
+}
+@media (max-width: 1024px) {
+    .title {
+        padding-top: 50px;
+        font-size: 35px;
+        line-height: 53px;
+        margin-bottom: 35px;
+    }
+    .products__slider-text {
+        font-size: 20px;
+        line-height: 22px;
+    }
+}
+@media (max-width: 940px) {
+    .products__text {
+        padding-right: 0;
+        max-width: 100%;
+        margin-bottom: 140px;
+    }
+    .products__inner {
+        display: block;
+    }
+    .products__slider {
+        margin-left: auto;
+    }
+    .questions__item:nth-child(3)::before {
+        display: none;
+    }
+    .contacts__form {
+        margin-right: 86px;
+    }
+
+}
+@media (max-width: 787px) {
+    .benefits__item:nth-child() {
+        margin-left: 0;
+        transform: translateY(0);
+    }
+    .specifications__item img {
+        display: none;
+    }
+    .questions__item {
+        width: 80%;
+    }
+} 
+
+@media (max-width: 680px) {
+    .products__inner {
+        padding-left: 0;
+    }
+    .title {
+        padding-left: 0;
+        font-size: 26px;
+        line-height: 28px;
+        margin-bottom: 30px;
+    }
+    .products__text {
+        margin-bottom: 100px;
+    }
+    .products__text p {
+        margin-bottom: 10px;
+    }
+    .products__slider {
+        max-width: 100%;
+        &::before {
+            width: 100%;
+            height: 100%;
+        }
+        img {
+            width: 100%;
+        }
+    }
+    .benefits__info {
+        width: 100%;
+    }
+    .benefits__item:nth-child(even),
+    .benefits__item:nth-child(3) {
+        margin-left: 0;
+    }
+    .contacts__inner  {
+        flex-direction: column;
+    }
+    .contacts__social-list {
+        flex-direction: row;
+    }
+    .contacts__social-item {
+        padding: 14px;
+    }
+}
+@media (max-width: 640px) {
+    .contacts__form {
+        margin-right: 0;
+        width: auto;
+    }
+}
+@media (max-width: 580px) {
+    .specifications__inner {
+        display: flex;
+        flex-direction: column;
+    }
+    .specifications__box-2,
+    .specifications__box-4 {
+        margin-top: 0px;
+    }
+    .specifications__box {
+        margin-bottom: 16px;
+    }
+    .questions__item-title {
+        font-size: 17px;
+        padding: 10px 5px 10px 20px;
+    }
+    .questions__item-text {
+        font-size: 14px;
+        padding: 0 5px 25px 20px;
+    }
+}
 @media (max-width: 540px) {
     .top__title {
         display: none;
@@ -807,8 +985,26 @@ body {
     .scroll__btn {
         padding: 13px 0;
     }
+    .benefits__num {
+        display: none;
+    }
 }
-
+@media (max-width: 480px) {
+    .benefits__item {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
+@media (max-width: 340px) {
+    .questions__item-title {
+        font-size: 15px;
+        padding: 5px 2px 5px 10px;
+    }
+    .questions__item-text {
+        font-size: 14px;
+        padding: 0 5px 25px 20px;
+    }
+}
 @media (max-height: 377px) {
     .menu__list-phone {
         padding: 8px 0;
